2006-03-17  Andrew Cagney  <cagney@redhat.com>

	* StressAttachDetachRapidlyCloningMainTask.java: Rename
	StressTaskObserver.java.

2006-03-16  Andrew Cagney  <cagney@redhat.com>

	* TaskState.java (processRequestStepInstruction): Delete.
	(stepping, stopped): Delete state.	
	* Task.java (requestStepInstruction): Delete.

2006-03-15  Andrew Cagney  <cagney@redhat.com>

	* TaskState.java (isStopped, isRunning, isDead): Delete.
	* Task.java (isStopped, isRunning, isDead): Delete.
	
	* TaskState.java (processRequestStop): Delete.
	(processPerformContinue): Rename processRequestContinue.
	(stopping, stoppingInSyscall, paused, unpaused): Delete states.
	* Task.java (requestStop): Delete.
	(performContinue): Rename requestContinue.
	* ProcState.java: Update.
	
	* ProcState.java (processPerformTaskContinueCompleted): Delete.
	* Proc.java (performTaskContinueCompleted): Delete.
	* Task.java (performContinue): Delete.
	* TaskState.java (processPerformContinue): Delete.

	* TaskState.java (processPerformStop): Delete.
	(performingStop): Delete state.
	* ProcState.java (processPerformTaskStopCompleted): Delete.
	* Proc.java (performTaskStopCompleted): Delete.
	* Task.java (performStop): Delete.

	* Proc.java (observableTaskAddedXXX, observableTaskRemovedXXX):
	Delete.

2006-03-14  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (assertRunUntilStop (int, String): New.
	* StressTaskObserver.java: Increase timeout to 20 seconds.

	* TestTaskObserver.java (testAttachDetachRapidlyCloningMainTask):
	Move to new file.
	* StressTaskObserver.java: New file.

	* TestLib.java (logger): Add protected field.
	* Task.java (logger): Change from private to protected final.
	* Host.java (logger): Ditto.
	* Proc.java (logger): Ditto.
	* LinuxHost.java (logger): Delete.
	* LinuxTask.java (logger): Delete.

	* TestLib.java: Update; frysk.sys.Poll simplified, member
	SignalSet deleted, Fds parameter removed.

2006-03-13  Andrew Cagney  <cagney@redhat.com>
