@@ -1,3 +1,8 @@
+2006-03-19  Andrew Cagney  <cagney@redhat.com>
+
+	* SourceWindow.java (setMyTask): Do not append Task.getStateString
+	to the name; value should have been private to Task.
+
 2006-03-17  Adam Jocksch  <ajocksch@redhat.com>
 
 	* cparser/CDTParser.java (parse): Now parses file with QUICK_PARSE and
